# torchstudio

./: README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: main.yml
experiments/: attention.py  grad_accumulation.py
experiments/rl/: bandit_problem.py  finite_mdp.py  tic_tac_toe.py
experiments/rl/grpo/: make_llm_dataset.py  make_vlm_dataset.py
experiments/vlm/: visual_text.py
tests/: test_flash_attn.py  test_iou.py
torchstudio/: version.py
torchstudio/attention/: flash_attn.py  flash_attn_numpy.py
torchstudio/flash_attn/: __init__.py
torchstudio/image_processing/: blur.py  layout.py
torchstudio/plot/: bbox.py  mask.py  text.py
torchstudio/rl/: bandit_problem.py  grpo_llm.py  make_llm_dataset.py  tic-tac-toe.py  tic_tac_toe.py
torchstudio/rl/grpo/: make_vlm_dataset.py  train_llm.py  train_vlm.py
torchstudio/triton/: add.py
torchstudio/utils/: iou.py
torchstudio/vlm/: visual_text.py
