[build-system]
requires = [
    "build>=1.2.2",
    "setuptools>=75",
    "packaging>=24.2",
    "wheel>=0.45.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "torchstudio"
dynamic = ["version"]
description = "Neural Network Models"
readme = "README.md"
authors = [
    {name = "Jiau Zhang", email = "jiauzhang@163.com"},
]
license = {file = "LICENSE"}
classifiers = [
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
keywords = [
    'PyTorch',
    'Deep Learning',
    'Artificial Intelligence',
]
requires-python = ">=3.8"
dependencies = [
    "nnm",
    'conippets>=0.1.8',
]

[project.urls]
Homepage = "https://github.com/jiauzhang/torchstudio"

[tool.setuptools]
package-dir = {"torchstudio" = "torchstudio"}

[tool.setuptools.dynamic]
version = {attr = "torchstudio.__version__"}

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
