[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "torchstudio"
dynamic = ["version"]
description = "Deep Learning Experiment"
readme = "README.md"
authors = [
    {name = "Jiau Zhang", email = "jiauzhang@163.com"},
]
license = {file = "LICENSE"}
classifiers = [
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
keywords = [
    'PyTorch',
    'Deep Learning',
    'Artificial Intelligence',
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6",
    "nnm",
    "conippets>=0.1.8",
    "matplotlib",
    "pillow",
    "trl>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/jiauzhang/torchstudio"

[tool.hatch.version]
path = "torchstudio/version.py"

[tool.hatch.build.targets.wheel]
packages = ["torchstudio"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
